build profiles complete