@@ -21,9 +21,10 @@
     </distributionManagement>
 
     <properties>
+        <mainClass>Main</mainClass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <exec.mainClass>Main</exec.mainClass>
-        <sonar.exclusions>**/Client/**/*, **/RemoteView/**/*, **/Misc/**/*, **/Exceptions/**/*, Main.java
+        <exec.mainClass>${mainClass}</exec.mainClass>
+        <sonar.exclusions>**/Client/**/*, **/Server/**/*, **/Misc/**/*, **/Exceptions/**/*, Main.java
         </sonar.exclusions>
     </properties>
 
@@ -117,37 +118,11 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <archive>
-                                <manifest>
-                                    <mainClass>Main</mainClass>
-                                </manifest>
-                            </archive>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>libs/</classpathPrefix>
-                            <mainClass>
-                                Main
-                            </mainClass>
+                            <mainClass>${mainClass}</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -162,13 +137,27 @@
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>server</id>
+            <properties>
+                <mainClass>it.polimi.ingsw.Server.WelcomeServer</mainClass>
+            </properties>
+        </profile>
+        <profile>
+            <id>gui</id>
+            <properties>
+                <mainClass>it.polimi.ingsw.Client.GUI.GUI</mainClass>
+            </properties>
+        </profile>
+        <profile>
+            <id>cli</id>
+            <properties>
+                <mainClass>it.polimi.ingsw.Client.CLI.CLI</mainClass>
+            </properties>
+        </profile>
+    </profiles>
 </project>
